storage/innobase/dict/drop.cc
@@ -253,6 +253,7 @@ void trx_t::commit(std::vector<pfs_os_file_t> &deleted)
     /* commit_persist() already reset this. */
     ut_ad(!lock.was_chosen_as_deadlock_victim);
     lock.n_rec_locks= 0;
+    lock.set_nth_bit_calls= 0;
     while (dict_table_t *table= UT_LIST_GET_FIRST(lock.evicted_tables))
     {
       UT_LIST_REMOVE(lock.evicted_tables, table);
