storage/innobase/include/btr0btr.h
@@ -85,18 +85,22 @@ btr_root_adjust_on_import(
 ATTRIBUTE_COLD void btr_read_failed(dberr_t err, const dict_index_t &index);
 
 /** Get an index page and declare its latching order level.
-@param[in]	index	index tree
-@param[in]	page	page number
-@param[in]	mode	latch mode
-@param[in]	merge	whether change buffer merge should be attempted
-@param[in,out]	mtr	mini-transaction
-@param[out]	err	error code
-@param[out]	first	set if this is a first-time access to the page
+@param  index         index tree
+@param  page          page number
+@param  latch_mode    latch mode
+@param  merge         whether change buffer merge should be attempted
+@param  mtr           mini-transaction
+@param  err           error code
+@param  first         set if this is a first-time access to the page
 @return block */
-buf_block_t *btr_block_get(const dict_index_t &index,
-                           uint32_t page, rw_lock_type_t mode, bool merge,
-                           mtr_t *mtr, dberr_t *err= nullptr,
-                           bool *first= nullptr);
+buf_block_t *btr_block_get(const dict_index_t &index, uint32_t page,
+                           rw_lock_type_t latch_mode, bool merge, mtr_t *mtr,
+                           dberr_t *err= nullptr, bool *first= nullptr
+#if defined(UNIV_DEBUG) || !defined(DBUG_OFF)
+                           , ulint page_get_mode= BUF_GET
+                           /*!< BUF_GET or BUF_GET_POSSIBLY_FREED */
+#endif /* defined(UNIV_DEBUG) || !defined(DBUG_OFF) */
+                            );
 
 /**************************************************************//**
 Gets the index id field of a page.
