storage/innobase/lock/lock0lock.cc
@@ -46,6 +46,7 @@ Created 5/7/1996 Heikki Tuuri
 #include "srv0mon.h"
 #include "que0que.h"
 #include "scope.h"
+#include "buf0buf.h"
 #include <debug_sync.h>
 #include <mysql/service_thd_mdl.h>
 
@@ -1184,7 +1185,8 @@ lock_sec_rec_some_has_impl(
 	dict_index_t*	index,	/*!< in: secondary index */
 	const rec_offs*	offsets)/*!< in: rec_get_offsets(rec, index) */
 {
-  lock_sys.assert_unlocked();
+  /* The current function can be called from lock_rec_unlock_unmodified()
+  under lock_sys.wr_lock() */
   ut_ad(!dict_index_is_clust(index));
   ut_ad(page_rec_is_user_rec(rec));
   ut_ad(rec_offs_validate(rec, index, offsets));
@@ -2292,8 +2294,8 @@ static void lock_rec_dequeue_from_page(lock_t *in_lock, bool owns_wait_mutex)
 
 	const page_id_t page_id{in_lock->un_member.rec_lock.page_id};
 	auto& lock_hash = lock_sys.hash_get(in_lock->type_mode);
-	ut_ad(lock_sys.is_writer() || in_lock->trx->mutex_is_owner());
-
+	ut_ad(lock_sys.is_writer() || in_lock->trx->mutex_is_owner()
+		|| lock_sys.is_cell_locked(*in_lock));
 	ut_d(auto old_n_locks=)
 	in_lock->index->table->n_rec_locks--;
 	ut_ad(old_n_locks);
@@ -2303,7 +2305,6 @@ static void lock_rec_dequeue_from_page(lock_t *in_lock, bool owns_wait_mutex)
 	lock_sys.assert_locked(cell);
 
 	HASH_DELETE(lock_t, hash, &lock_hash, rec_fold, in_lock);
-	ut_ad(lock_sys.is_writer() || in_lock->trx->mutex_is_owner());
 	UT_LIST_REMOVE(in_lock->trx->lock.trx_locks, in_lock);
 
 	MONITOR_INC(MONITOR_RECLOCK_REMOVED);
@@ -3711,7 +3712,8 @@ lock_table_remove_low(
 	trx = lock->trx;
 	table = lock->un_member.tab_lock.table;
 	lock_sys.assert_locked(*table);
-	ut_ad(trx->mutex_is_owner());
+	ut_ad(lock_sys.is_writer() || trx->mutex_is_owner()
+		|| lock->un_member.tab_lock.table->lock_mutex_is_owner());
 
 	/* Remove the table from the transaction's AUTOINC vector, if
 	the lock that is being released is an AUTOINC lock. */
@@ -3973,7 +3975,8 @@ static void lock_table_dequeue(lock_t *in_lock, bool owns_wait_mutex)
 #ifdef SAFE_MUTEX
 	ut_ad(owns_wait_mutex == mysql_mutex_is_owner(&lock_sys.wait_mutex));
 #endif
-	ut_ad(in_lock->trx->mutex_is_owner());
+	ut_ad(lock_sys.is_writer() || in_lock->trx->mutex_is_owner()
+		|| in_lock->un_member.tab_lock.table->lock_mutex_is_owner());
 	lock_t*	lock = UT_LIST_GET_NEXT(un_member.tab_lock.locks, in_lock);
 
 	const dict_table_t* table = lock_table_remove_low(in_lock);
@@ -4409,6 +4412,7 @@ released:
   }
 
   trx->lock.n_rec_locks= 0;
+  trx->lock.set_nth_bit_calls= 0;
 
 #ifdef UNIV_DEBUG
   if (to_evict.empty())
@@ -4465,7 +4469,8 @@ static void lock_rec_unlock(hash_cell_t &cell, lock_t *lock, ulint heap_no)
   ut_ad(!mysql_mutex_is_owner(&lock_sys.wait_mutex));
 #endif /* SAFE_MUTEX */
   ut_ad(!lock->is_table());
-  ut_ad(lock_sys.is_writer() || lock->trx->mutex_is_owner());
+  ut_ad(lock_sys.is_writer() || lock->trx->mutex_is_owner() ||
+        lock_sys.is_cell_locked(*lock));
 
   lock_rec_reset_nth_bit(lock, heap_no);
 
@@ -4480,66 +4485,59 @@ static void lock_rec_unlock(hash_cell_t &cell, lock_t *lock, ulint heap_no)
 }
 
 /** Release locks to unmodified records on a clustered index page.
+@param block    the block containing locked records
 @param cell     lock_sys.rec_hash cell of lock
 @param lock     record lock
 @param offsets  storage for rec_get_offsets()
-@param heap     storage for rec_get_offsets()
-@param mtr      mini-transaction (will be started and committed) */
-static void lock_rec_unlock_unmodified(hash_cell_t &cell, lock_t *lock,
-                                       rec_offs *&offsets, mem_heap_t *&heap,
-                                       mtr_t &mtr)
+@param heap     storage for rec_get_offsets() */
+static void lock_rec_unlock_unmodified(buf_block_t *block, hash_cell_t &cell,
+                                       lock_t *lock, rec_offs *&offsets,
+                                       mem_heap_t *&heap)
 {
+  DEBUG_SYNC_C("lock_rec_unlock_unmodified_start");
   ut_ad(!lock->is_waiting());
 
   dict_index_t *const index= lock->index;
 
-  mtr.start();
-  if (buf_block_t *block=
-      btr_block_get(*index, lock->un_member.rec_lock.page_id.page_no(),
-                    RW_S_LATCH, true, &mtr))
+  if (UNIV_UNLIKELY(!page_is_leaf(block->page.frame)))
   {
-    if (UNIV_UNLIKELY(!page_is_leaf(block->page.frame)))
-    {
-      /* There can be locks with clean bitmap on non-leaf pages in the case of
-      page split. See lock_move_rec_list_end() call stack for details. */
-      ut_ad(lock_rec_find_set_bit(lock) == ULINT_UNDEFINED);
-      goto func_exit;
-    }
+    /* There can be locks with clean bitmap on non-leaf pages.
+    See lock_update_root_raise() for details. */
+    ut_ad(lock_rec_find_set_bit(lock) == ULINT_UNDEFINED);
+    return;
+  }
 
-    for (ulint i= PAGE_HEAP_NO_USER_LOW; i < lock_rec_get_n_bits(lock); ++i)
+  for (ulint i= PAGE_HEAP_NO_USER_LOW; i < lock_rec_get_n_bits(lock); ++i)
+  {
+    if (!lock_rec_get_nth_bit(lock, i));
+    else if (const rec_t *rec=
+                 page_find_rec_with_heap_no(block->page.frame, i))
     {
-      if (!lock_rec_get_nth_bit(lock, i));
-      else if (const rec_t *rec=
-               page_find_rec_with_heap_no(block->page.frame, i))
+      if (index->is_clust())
       {
-        if (index->is_clust())
-        {
-          if (trx_read_trx_id(rec + row_trx_id_offset(rec, index)) ==
-              lock->trx->id)
-            continue;
-        unlock_rec:
-          lock_rec_unlock(cell, lock, i);
-        }
-        else
-        {
-          offsets= rec_get_offsets(rec, index, offsets, index->n_core_fields,
-                                   ULINT_UNDEFINED, &heap);
-          trx_t *impl_trx=
-              lock_sec_rec_some_has_impl(lock->trx, rec, index, offsets);
-          /* row_vers_impl_x_locked_low() references trx in both cases, i.e.
-          when caller trx is equal to trx, which modified the record, it
-          references the trx directly, otherwise it invokes trx_sys.find(),
-          which also references trx, so the trx must be released anyway. */
-          if (impl_trx)
-            impl_trx->release_reference();
-          if (lock->trx != impl_trx)
-            goto unlock_rec;
-        }
+        if (trx_read_trx_id(rec + row_trx_id_offset(rec, index)) ==
+            lock->trx->id)
+          continue;
+      unlock_rec:
+        lock_rec_unlock(cell, lock, i);
+      }
+      else
+      {
+        offsets= rec_get_offsets(rec, index, offsets, index->n_core_fields,
+                                 ULINT_UNDEFINED, &heap);
+        trx_t *impl_trx=
+            lock_sec_rec_some_has_impl(lock->trx, rec, index, offsets);
+        /* row_vers_impl_x_locked_low() references trx in both cases, i.e.
+        when caller trx is equal to trx, which modified the record, it
+        references the trx directly, otherwise it invokes trx_sys.find(),
+        which also references trx, so the trx must be released anyway. */
+        if (impl_trx)
+          impl_trx->release_reference();
+        if (lock->trx != impl_trx)
+          goto unlock_rec;
       }
     }
   }
-func_exit:
-  mtr.commit();
 }
 
 /** Release non-exclusive locks on XA PREPARE,
@@ -4565,7 +4563,7 @@ static bool lock_release_on_prepare_try(trx_t *trx)
 
   lock_sys.rd_lock(SRW_LOCK_CALL);
   trx->mutex_lock();
-
+reiterate:
   /* Note: Normally, trx->mutex is not held while acquiring
   a lock table latch, but here we are following the opposite order.
   To avoid deadlocks, we only try to acquire the lock table latches
@@ -4590,12 +4588,49 @@ static bool lock_release_on_prepare_try(trx_t *trx)
       if (latch->try_acquire())
       {
         if (!rec_granted_exclusive_not_gap)
+        {
           lock_rec_dequeue_from_page(lock, false);
+          latch->release();
+        }
         else if (supremum_bit)
+        {
           lock_rec_unlock(*cell, lock, PAGE_HEAP_NO_SUPREMUM);
+          latch->release();
+        }
         else
-          lock_rec_unlock_unmodified(*cell, lock, offsets, heap, mtr);
-        latch->release();
+        {
+          ulint set_nth_bit_calls= trx->lock.set_nth_bit_calls;
+          latch->release();
+          lock_sys.rd_unlock();
+          trx->mutex_unlock();
+          mtr.start();
+          buf_block_t *block= btr_block_get(
+              *lock->index, lock->un_member.rec_lock.page_id.page_no(),
+              RW_S_LATCH, true, &mtr, nullptr, nullptr,
+              BUF_GET_POSSIBLY_FREED);
+          lock_sys.rd_lock(SRW_LOCK_CALL);
+          if (block)
+          {
+            if (latch->try_acquire())
+            {
+              lock_rec_unlock_unmodified(block, *cell, lock, offsets, heap);
+              latch->release();
+            }
+            else
+              all_released= false;
+          }
+          else
+            /* The block could be freed during merging pages when lock_sys
+            was unlocked. In this case the locks bitmap must be empty,
+            see lock_move_rec_list_start() and its callers for details. */
+            ut_ad(lock_rec_find_set_bit(lock) == ULINT_UNDEFINED);
+          mtr.commit();
+          trx->mutex_lock();
+          /* If some locks were added during pages merge/split or during
+          implicit to explicit locks conversion, re-scan trx->lock.trx_locks.*/
+          if (set_nth_bit_calls != trx->lock.set_nth_bit_calls)
+            goto reiterate;
+        }
       }
       else
         all_released= false;
@@ -4669,10 +4704,15 @@ and release possible other transactions waiting because of these locks. */
 void lock_release_on_prepare(trx_t *trx)
 {
   trx->set_skip_lock_inheritance();
-
+#ifdef ENABLED_DEBUG_SYNC
+  DBUG_EXECUTE_IF("skip_lock_release_on_prepare_try", goto skip_try;);
+#endif /* ENABLED_DEBUG_SYNC */
   for (ulint count= 5; count--; )
     if (lock_release_on_prepare_try(trx))
       return;
+#ifdef ENABLED_DEBUG_SYNC
+skip_try:
+#endif /* ENABLED_DEBUG_SYNC */
 
   mtr_t mtr;
   rec_offs offsets_[REC_OFFS_NORMAL_SIZE];
@@ -4681,61 +4721,82 @@ void lock_release_on_prepare(trx_t *trx)
 
   rec_offs_init(offsets_);
 
+  lock_sys.wr_lock(SRW_LOCK_CALL);
+  trx->mutex_lock();
+reiterate:
+  for (lock_t *prev, *lock= UT_LIST_GET_LAST(trx->lock.trx_locks); lock;
+       lock= prev)
   {
-    LockMutexGuard g{SRW_LOCK_CALL};
-    trx->mutex_lock();
-
-    for (lock_t *prev, *lock= UT_LIST_GET_LAST(trx->lock.trx_locks); lock;
-         lock= prev)
+    ut_ad(lock->trx == trx);
+    prev= UT_LIST_GET_PREV(trx_locks, lock);
+    if (!lock->is_table())
     {
-      ut_ad(lock->trx == trx);
-      prev= UT_LIST_GET_PREV(trx_locks, lock);
-      if (!lock->is_table())
-      {
-        ut_ad(!lock->index->table->is_temporary());
-        if (!lock->is_rec_granted_exclusive_not_gap())
-          lock_rec_dequeue_from_page(lock, false);
-        else if (UNIV_UNLIKELY(lock->type_mode &
-                               (LOCK_PREDICATE | LOCK_PRDT_PAGE)))
-          /* SPATIAL INDEX locking is broken. */;
-        else
-        {
-          auto cell= lock_sys.rec_hash.cell_get(lock->un_member.rec_lock.
-                                                page_id.fold());
-          if (lock_rec_get_nth_bit(lock, PAGE_HEAP_NO_SUPREMUM))
-            lock_rec_unlock(*cell, lock, PAGE_HEAP_NO_SUPREMUM);
-          else
-          {
-            ut_ad(lock->trx->isolation_level > TRX_ISO_READ_COMMITTED ||
-                  /* Insert-intention lock is valid for supremum for isolation
-                     level > TRX_ISO_READ_COMMITTED */
-                  lock->mode() == LOCK_X ||
-                  !lock_rec_get_nth_bit(lock, PAGE_HEAP_NO_SUPREMUM));
-            lock_rec_unlock_unmodified(*cell, lock, offsets, heap, mtr);
-          }
-        }
-      }
+      ut_ad(!lock->index->table->is_temporary());
+      if (!lock->is_rec_granted_exclusive_not_gap())
+        lock_rec_dequeue_from_page(lock, false);
+      else if (UNIV_UNLIKELY(lock->type_mode &
+                             (LOCK_PREDICATE | LOCK_PRDT_PAGE)))
+        /* SPATIAL INDEX locking is broken. */;
       else
       {
-        ut_d(dict_table_t *table= lock->un_member.tab_lock.table);
-        ut_ad(!table->is_temporary());
-        switch (lock->mode()) {
-        case LOCK_IS:
-        case LOCK_S:
-          lock_table_dequeue(lock, false);
-          lock_trx_table_locks_remove(lock);
-          break;
-        case LOCK_IX:
-        case LOCK_X:
-          ut_ad(table->id >= DICT_HDR_FIRST_ID || trx->dict_operation);
-          /* fall through */
-        default:
-          break;
+        auto cell= lock_sys.rec_hash.cell_get(
+            lock->un_member.rec_lock.page_id.fold());
+        if (lock_rec_get_nth_bit(lock, PAGE_HEAP_NO_SUPREMUM))
+          lock_rec_unlock(*cell, lock, PAGE_HEAP_NO_SUPREMUM);
+        else
+        {
+          ut_ad(lock->trx->isolation_level > TRX_ISO_READ_COMMITTED ||
+                /* Insert-intention lock is valid for supremum for isolation
+                   level > TRX_ISO_READ_COMMITTED */
+                lock->mode() == LOCK_X ||
+                !lock_rec_get_nth_bit(lock, PAGE_HEAP_NO_SUPREMUM));
+          ulint set_nth_bit_calls= trx->lock.set_nth_bit_calls;
+          lock_sys.wr_unlock();
+          trx->mutex_unlock();
+          mtr.start();
+          buf_block_t *block= btr_block_get(
+              *lock->index, lock->un_member.rec_lock.page_id.page_no(),
+              RW_S_LATCH, true, &mtr, nullptr, nullptr,
+              BUF_GET_POSSIBLY_FREED);
+          lock_sys.wr_lock(SRW_LOCK_CALL);
+          if (block)
+            lock_rec_unlock_unmodified(block, *cell, lock, offsets, heap);
+          else
+            /* The block could be freed during merging pages when lock_sys
+            was unlocked. In this case the locks bitmap must be empty,
+            see lock_move_rec_list_start() and its callers for details. */
+            ut_ad(lock_rec_find_set_bit(lock) == ULINT_UNDEFINED);
+          mtr.commit();
+          trx->mutex_lock();
+          /* If some locks were added during pages merge/split or during
+          implicit to explicit locks conversion, re-scan trx->lock.trx_locks.*/
+          if (set_nth_bit_calls != trx->lock.set_nth_bit_calls)
+            goto reiterate;
         }
+      }
+    }
+    else
+    {
+      ut_d(dict_table_t *table= lock->un_member.tab_lock.table);
+      ut_ad(!table->is_temporary());
+      switch (lock->mode())
+      {
+      case LOCK_IS:
+      case LOCK_S:
+        lock_table_dequeue(lock, false);
+        lock_trx_table_locks_remove(lock);
+        break;
+      case LOCK_IX:
+      case LOCK_X:
+        ut_ad(table->id >= DICT_HDR_FIRST_ID || trx->dict_operation);
+        /* fall through */
+      default:
+        break;
       }
     }
   }
 
+  lock_sys.wr_unlock();
   trx->mutex_unlock();
 
   if (UNIV_LIKELY_NULL(heap))
